--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css" />
-        <title>Ocean-Weather Visualization</title>
+        <title>Envirovision</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
